Stage 4: AI coaching engine

--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,7 @@ RAZORPAY_KEY_SECRET=your-secret
 # Calendly (for escalation — used in Stage 7)
 NEXT_PUBLIC_CALENDLY_URL=https://calendly.com/your-link
 
+NEXT_PUBLIC_ADMIN_EMAIL=prashanth@growthaspire.com
+
 # App
 NEXT_PUBLIC_APP_URL=http://localhost:3000
