--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
     "@supabase/ssr": "^0.5.0",
     "lucide-react": "^0.460.0",
     "clsx": "^2.1.0",
-    "sonner": "^1.7.0"
+    "sonner": "^1.7.0",
+    "pdf-parse": "^1.1.1",
+    "mammoth": "^1.8.0",
+    "openai": "^4.70.0",
+    "@anthropic-ai/sdk": "^0.30.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/pdf-parse": "^1.1.4",
     "typescript": "^5",
     "tailwindcss": "^3.4.0",
     "postcss": "^8",
